--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "easy-autocomplete": "^1.3.5",
+        "npm": "^6.9.0",
         "select2-bootstrap4-theme": "^1.0.0"
     }
 }
